fixing group buttons overlap on safari and iPad
reference: https://github.com/jgthms/bulma/issues/469

- Added in 0 fallback for partially supported “auto” property

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -2273,7 +2273,9 @@ a.box:active {
 
 .control.is-grouped > .control {
   -ms-flex-preferred-size: 0;
+  -ms-flex-preferred-size: auto;
       flex-basis: 0;
+      flex-basis: auto;
   -ms-flex-negative: 0;
       flex-shrink: 0;
 }
